fixed horizontal scroll bug

--- a/docs/css/style.css
+++ b/docs/css/style.css
@@ -31395,3 +31395,7 @@ blockquote {
 #Team {
   display: none;
 }
+
+html, body {
+  overflow-x: hidden;
+}
